Fix Layout on mobile, add css grid back etc

--- a/src/App.scss
+++ b/src/App.scss
@@ -365,10 +365,11 @@ button:focus, button:active  {
 
 @media (max-width: 700px) {
   .app, .dark-mode .app{
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 100%;
     border: 0;
     box-shadow: none;
+    grid-template-rows: 28% 93% auto;
   }
   body {
     background-color: #ffeead;
@@ -384,17 +385,19 @@ button:focus, button:active  {
   }
   #todos, .dark-mode #todos {
     height: 80%;
-    margin-left: 0.3em;
     #input-todo-wrap {
       width: 100%;
+      margin: 0;
+      height: 2em;
+      justify-content: center;
     }
     ul {
-      width: 80%;
-      margin-top: 2em;
+      width: 85%;
     }
   }
   #todos #new-todo {
-    width: 90%;
+    width: 85%;
+    margin: 0;
   }
   .dark-mode #todos ul li {
     font-size: 0.7em;
@@ -425,8 +428,8 @@ button:focus, button:active  {
   #sidebar #button-wrapper, .dark-mode #sidebar #button-wrapper {
     display: flex;
     justify-content: space-evenly;
-    padding: 0.5em;
-    height: 2em;
+    align-items: flex-end;
+    height: 1.5em;
     border: 0;
   }
   .dark-mode #list-toggle, #list-toggle {
